--- a/package.json
+++ b/package.json
@@ -4,38 +4,45 @@
   "main": "src/index.js",
   "author": "Ricardo Rius",
   "license": "Apache-2.0",
-  "private": true,
   "scripts": {
     "test": "react-scripts test --env=jsdom",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "geth-dev": "rm -fR .devNet/datadir/geth/ && geth --networkid=1337 --datadir=.devNet/datadir --port=30303 --rpc --rpcport=9545 --rpcaddr=localhost  --rpccorsdomain=\"*\" --nodiscover --maxpeers=0 --ws --wsport=9546 --wsaddr=localhost --wsorigins=\"*\" --mine --shh --rpcapi=eth,web3,net,debug,shh,personal --wsapi=eth,web3,net,shh,debug,personal --dev --dev.period 3 --targetgaslimit=4712388 --verbosity 5",
-    "geth-dev-unlock": "geth --exec 'loadScript(\"scripts/createbalances.js\")' attach .devNet/datadir/geth.ipc"
+    "ganache-dev": "ganache-cli -a=10 -p=8545 -i=1335 -l=8000000 -g=1000000000 -m='coffee slogan task clinic begin rocket rabbit despair tank kid hire quiz'",
+    "geth-dev:whisper": "yarn geth-dev:delete && geth --networkid=1337 --datadir=.dev/datadir --shh --ws --wsport=8546 --wsaddr=localhost --wsorigins=\"*\" --wsapi=eth,web3,net,shh,debug,personal --nodiscover --maxpeers=0 --dev",
+    "geth-dev:delete": "rm -fR .dev/datadir/geth/",
+    "geth-dev:remove": "yes | geth removedb --datadir=.dev/datadir",
+    "geth-dev:chain": "geth --networkid=1337 --datadir=.dev/datadir --unlock f18f16eebae0912a17885d743754c943b548a630,04c4b39e60ab3655af44cb928ac0da196188dd65,2eb6b952af9ef44f376e799ca44a76a28d3e8957,d84d3cd384604375a115d697e838b5b4ed681c9d,1435b9664159cc908d67c46b2f92ecb414ec8190,5fc5cea687718fbdb529f19a2fffb621aa828405,8d36227d3549846490fdf61e51a07ce5c84cfd56,cf2069750e3ce70f971f7f0af9538af7fd773e47,eee054834b10c5c76e2e25c8b00b0499f2916df2,46bbce669bd8b37660695d4f863da4665079c596 --password config/dev_pass.txt --cache=1024 --cache.database=75 --port=30303 --rpc --rpcport=8545 --rpcaddr=localhost  --rpccorsdomain=\"*\" --nodiscover --maxpeers=0 --ws --wsport=8546 --wsaddr=localhost --wsorigins=\"*\" --mine --minerthreads=1 --shh --rpcapi=eth,web3,net,debug,shh,personal --wsapi=eth,web3,net,shh,debug,personal --targetgaslimit=800000000 --gasprice=1000000000 --dev --dev.period=1",
+    "geth-dev:supply": "geth --exec 'loadScript(\"scripts/createbalances.js\")' attach .dev/datadir/geth.ipc",
+    "geth-dev": "yarn geth-dev:delete && (sleep 10s; yarn geth-dev:supply) & yarn geth-dev:chain",
+    "geth-dev:init": "geth --datadir=.dev/datadir init .dev/datadir/gethGenesisBlock.json",
+    "geth-dev:priv-chain": " geth --networkid=1337 --datadir=.dev/datadir --unlock f18f16eebae0912a17885d743754c943b548a630,04c4b39e60ab3655af44cb928ac0da196188dd65,2eb6b952af9ef44f376e799ca44a76a28d3e8957,d84d3cd384604375a115d697e838b5b4ed681c9d,1435b9664159cc908d67c46b2f92ecb414ec8190,5fc5cea687718fbdb529f19a2fffb621aa828405,8d36227d3549846490fdf61e51a07ce5c84cfd56,cf2069750e3ce70f971f7f0af9538af7fd773e47,eee054834b10c5c76e2e25c8b00b0499f2916df2,46bbce669bd8b37660695d4f863da4665079c596 --password config/dev_pass.txt --cache=1024 --cache.database=75 --port=30303 --rpc --rpcport=8545 --rpcaddr=localhost  --rpccorsdomain=\"*\" --nodiscover --maxpeers=0 --ws --wsport=8546 --wsaddr=localhost --wsorigins=\"*\" --mine --minerthreads=1 --etherbase=0xf18f16eebae0912a17885d743754c943b548a630  --shh --rpcapi=eth,web3,net,debug,shh,personal --wsapi=eth,web3,net,shh,debug,personal --gpopercentile=60 --gpoblocks=20 --targetgaslimit=800000000 --gasprice=1000000000 --ethash.dagdir=.dev/datadir/geth/ --ethash.cachedir=.dev/datadir/geth/ --ethash.dagsinmem=1 --ethash.dagsondisk=1",
+    "geth-priv": "yarn geth-dev:remove &&  yarn run geth-dev:init && yarn geth-dev:priv-chain"
   },
   "devDependencies": {
-    "ethr-did-registry": "^0.0.2",
-    "ganache-cli": "^6.1.0",
+    "ethr-did-registry": "^0.0.3",
+    "ganache-cli": "^6.1.6",
     "jest": "^22.4.3",
-    "truffle": "^4.1.13",
+    "truffle": "^4.1.14",
+    "truffle-contract": "^3.0.6",
     "truffle-hdwallet-provider": "^0.0.6",
-    "truffle-contract": "^3.0.5",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.35"
   },
   "dependencies": {
     "buffer": "^5.1.0",
     "did-jwt": "^0.0.8",
     "did-resolver": "^0.0.4",
     "ethjs-abi": "^0.2.1",
-    "ethjs-contract": "^0.1.9",
+    "ethjs-contract": "^0.2.3",
     "ethjs-provider-http": "^0.1.6",
-    "ethjs-query": "^0.3.5",
-    "ethr-did": "^0.0.5",
-    "ethr-did-resolver": "^0.0.8",
+    "ethjs-query": "^0.3.8",
+    "ethr-did": "^1.0.0",
+    "ethr-did-resolver": "^0.1.1",
     "interval-promise": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "terminal-in-react": "^4.3.0"
   }
 }
